--- a/app/views/admins/_form.html.erb
+++ b/app/views/admins/_form.html.erb
@@ -1,11 +1,11 @@
-<%= simple_form_for(@admin, :defaults => { :input_html => { :class => 'span8' } }) do |f| %>
+<%= simple_form_for(@user, :defaults => { :input_html => { :class => 'span8' } }) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :email, :required => true, :autofocus => true %>
     <%= f.input :password, :required => true %>
     <%= f.input :password_confirmation, :required => true %>
-    <%= f.association :roles, :as => :check_boxes, :input_html => { :class => nil, :disabled => (@admin == current_admin) } %>
+    <%= f.association :roles, :as => :check_boxes, :input_html => { :class => nil, :disabled => (@user == current_user) } %>
   </div>
 
   <div class="form-actions">
