--- a/app/views/admins/edit.html.erb
+++ b/app/views/admins/edit.html.erb
@@ -1,13 +1,13 @@
 <div class="page-header">
-  <%= link_to admins_path, :class => 'btn' do %>
+  <%= link_to users_path, :class => 'btn' do %>
     <i class="icon-list-alt"></i>
     Back
-  <% end if can? :manage, Admin %>
-  <%= link_to @admin, :class => 'btn btn-primary' do %>
+  <% end if can? :manage, User %>
+  <%= link_to @user, :class => 'btn btn-primary' do %>
     <i class="icon-info-sign icon-white"></i>
     Show
   <% end %>
-  <h1>Editing admin</h1>
+  <h1>Editing user</h1>
 </div>
 
 <%= render 'form' %>
