--- a/app/views/admins/new.html.erb
+++ b/app/views/admins/new.html.erb
@@ -1,9 +1,9 @@
 <div class="page-header">
-  <%= link_to admins_path, :class => 'btn' do %>
+  <%= link_to users_path, :class => 'btn' do %>
     <i class="icon-list-alt"></i>
     Back
   <% end %>
-  <h1>New admin</h1>
+  <h1>New user</h1>
 </div>
 
 <%= render 'form' %>
