--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -1,9 +1,9 @@
 <div class="page-header">
-  <%= link_to admins_path, :class => 'btn' do %>
+  <%= link_to users_path, :class => 'btn' do %>
     <i class="icon-list-alt"></i>
     Back
-  <% end if can? :manage, Admin %>
-  <%= link_to edit_admin_path(@admin), :class => 'btn btn-primary' do %>
+  <% end if can? :manage, User %>
+  <%= link_to edit_user_path(@user), :class => 'btn btn-primary' do %>
     <i class="icon-pencil icon-white"></i>
     Edit
   <% end %>
@@ -12,8 +12,8 @@
 
 <dl>
   <dt>Email:</dt>
-  <dd><%= @admin.email %></dd>
+  <dd><%= @user.email %></dd>
 
   <dt>Roles:</dt>
-  <dd><%= @admin.roles.map(&:name).join(', ') %></dd>
+  <dd><%= @user.roles.map(&:name).join(', ') %></dd>
 </dl>
