change references to Abu Dhabi to UAE

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -36,7 +36,7 @@
     <div class="navbar-inner">
       <div class="container-fluid">
         <%= link_to "/en#{home_path}", :class => 'homepage-banner' do %>
-          <img class="one" src="/assets/header-1.png">
+          <img class="one" src="/assets/header-new.png">
         <% end %>
 
         <ul class="nav pull-right">
