--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="title">
     <div class="inner">
       <h1>Blue Carbon</h1>
-      <h2>Measuring the Carbon Stocks of Abu Dhabi, UAE</h2>
+      <h2>Measuring the Carbon Stocks of the UAE</h2>
       <%= link_to layout_path, :class => 'button' do %>
         START USING THE<br> BLUE CARBON TOOL
       <% end %>
@@ -20,7 +20,7 @@
       <p>&#34;Blue carbon&#34; refers to the ability of coastal vegetation to sequester carbon. Blue carbon ecosystems, including mangrove forests, saltmarshes, seagrass beds and cyanobacterial mats, sequester and store atmospheric carbon in biomass and sediments, sometimes at rates higher than tropical rainforests. When these ecosystems are destroyed, buried carbon can be released into the atmosphere as carbon dioxide, contributing to climate change.</p>
       <%= link_to "Read more", about_path(:anchor => "what-is"), :class => 'button' %>
       <h3>THE BLUE CARBON DEMONSTRATION PROJECT</h3>
-      <p>This Blue Carbon Demonstration Project aims to investigate the opportunities in building a local greener Emirate through the better understanding of carbon and coastal ecosystem services and its potential contribution to climate change mitigation efforts. Experience and knowledge gained from the project will also help guide other national Blue Carbon projects and international efforts.</p>
+      <p>This Blue Carbon Demonstration Project aims to investigate the opportunities in building a local greener UAE through the better understanding of carbon and coastal ecosystem services and its potential contribution to climate change mitigation efforts. Experience and knowledge gained from the project will also help guide other national Blue Carbon projects and international efforts.</p>
       <%= link_to "Read more", about_path(:anchor => "demonstration"), :class => 'button' %>
     </div>
   </div>
