--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,9 +39,9 @@
       <div class="container-fluid">
         <%= link_to home_path, :class => 'homepage-banner' do %>
             <% if I18n.locale == I18n.default_locale %>
-            <img class="one" src="/assets/header-1.png">
+            <img class="one" src="/assets/header-new.png">
             <% else %>
-            <img class="one" src="/assets/header-1_ar.png">
+            <img class="one" src="/assets/header-new.png">
             <%end%>
         <% end %>
 
@@ -102,8 +102,8 @@
     // Lovely hack to fix bootstrap on mobile devices
     !function ($) {
       $(function(){
-        $('body').on('touchstart.dropdown', '.dropdown-menu', function (e) { 
-          e.stopPropagation(); 
+        $('body').on('touchstart.dropdown', '.dropdown-menu', function (e) {
+          e.stopPropagation();
         });
         $(document).on('click','.dropdown-menu a',function(){
           document.location = $(this).attr('href');
