--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -27,9 +27,9 @@
         <div id="home" class="banner <%= @active %>">
           <%= link_to home_path, :class => 'homepage-banner' do %>
             <% if I18n.locale == I18n.default_locale %>
-            <img class="one" src="/assets/header-1.png">
+            <img class="one" src="/assets/header-new.png">
             <% else %>
-            <img class="one" src="/assets/header-1_ar.png">
+            <img class="one" src="/assets/header-new.png">
             <%end%>
           <% end %>
         </div>
@@ -69,7 +69,7 @@
         </div>
         <div id="authentication" class="navbar"><%= render "layouts/sign_in" %></div>
         <div id="contact"><a href="mailto:info@agedi.ae" target="_top"><%= t('contact') %></a></div>
-        
+
       </div>
     </footer>
   </div>
