--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,12 +3,12 @@
     <img src="/assets/pages/AD_Mangrove_under_development.jpg" alt="AD Mangrove under development">
     <a name="demonstration"><h3>BLUE CARBON DEMONSTRATION PROJECT</h3></a>
     <p>In just over 40 years, Abu Dhabi has evolved from a small fishing community to the largest and most populated of the seven Emirates of the United Arab Emirates (UAE). With the vision and direction from His Highness the late Sheikh Zayed Bin Sultan Al Nahyan, the environment has become an intrinsic part of the heritage and traditions of the people of the UAE.</p>
-     <p>This national affinity to the sea has led to the initiation of the Abu Dhabi Blue Carbon Demonstration Project in order to explore the values which coastal ecosystems provide the UAE, and to help preserve our environmental and cultural heritage.</p>
+     <p>This national affinity to the sea has led to the initiation of the UAE Blue Carbon Demonstration Project in order to explore the values which coastal ecosystems provide the UAE, and to help preserve our environmental and cultural heritage.</p>
   </div>
   <div class="right">
     <img src="/assets/pages/1U6A0911.jpg" alt="The team">
     <h3>PROJECT TEAM</h3>
-    <p>The Abu Dhabi Blue Carbon Demonstration Project is facilitated by AGEDI and supported by the Environment Agency Abu Dhabi (EAD), and an expert team led by GRID-Arendal, including UNEP, UNEP-WCMC, Forest Trends, and a group of world-class coastal carbon scientists.</p>
+    <p>The UAE Blue Carbon Demonstration Project is facilitated by AGEDI and supported by the Environment Agency Abu Dhabi (EAD), and an expert team led by GRID-Arendal, including UNEP, UNEP-WCMC, Forest Trends, and a group of world-class coastal carbon scientists.</p>
   </div>
   <img src="/assets/pages/about_logos.png" alt="Supporters" id="img-supporters">
 </div>
@@ -17,13 +17,13 @@
   <div class="inner">
     <div class="left">
       <h3>BLUE CARBON MAPPING TOOLKIT</h3>
-      <p>The toolkit can be used to broadly assess the impact of development on coastal marine ecosystems and the associated blue carbon stock, helping to make informed decisions relating to the future development of Abu Dhabi. For more information on using the toolkit, visit the help page.</p>
+      <p>The toolkit can be used to broadly assess the impact of development on coastal marine ecosystems and the associated blue carbon stock, helping to make informed decisions relating to the future development of UAE. For more information on using the toolkit, visit the help page.</p>
       <img src="/assets/pages/2007-11-23 at 00-17-44.jpg" alt="Mangroves" id="img-mangroves">
     </div>
     <div class="right">
       <h3>ABOUT THE DATA</h3>
-      <p><img src="/assets/pages/out_on_sea.png" alt="Out on sea" id="img-out-on-sea">Baseline layers representing marine ecosystems (mangrove, salt marsh, seagrass and algal mats) around coastal Abu Dhabi were provided by the Abu Dhabi Environment Agency. They have been developed through a combination of comprehensive field based sampling, supported by Landsat and RapidEye satellite imagery analysis. Ecosystem layers have been enhanced further through input received from stakeholder consultation during the Abu Dhabi Local, National and Regional Biodiversity Assessment undertaken in 2011-13.</p>
-      <p>The ecosystem layers are continually updated to reflect the ongoing dynamics of Abu Dhabi&#39;s coastal ecosystems. </p>
+      <p><img src="/assets/pages/out_on_sea.png" alt="Out on sea" id="img-out-on-sea">Baseline layers representing marine ecosystems (mangrove, salt marsh, seagrass and algal mats) around coastal UAE were provided by the Abu Dhabi Environment Agency. They have been developed through a combination of comprehensive field based sampling, supported by Landsat and RapidEye satellite imagery analysis. Ecosystem layers have been enhanced further through input received from stakeholder consultation during the Abu Dhabi Local, National and Regional Biodiversity Assessment undertaken in 2011-13.</p>
+      <p>The ecosystem layers are continually updated to reflect the ongoing dynamics of UAE&#39;s coastal ecosystems. </p>
     </div>
   </div>
 </div>
@@ -44,7 +44,7 @@
     <p><span class="light-blue">Blue Carbon Ecosystems in This Area:</span> Provides a breakdown of the contribution of each ecosystem to i) the total area (km<sup>2</sup>), ii) the % of ecosystem as part of the total coverage within Abu Dhabi, iii) the carbon stock (tonnes) within the AOI.</p>
     <p class="footnote">1 &#8211; European Commission, Joint Research Centre (JRC)/PBL Netherlands Environmental Assessment Agency. Emission Database for Global Atmospheric Research (EDGAR), release version 4.2. <a href="http://edgar.jrc.ec.europa.eu/index.php" target="_blank">http://edgar.jrc.ec.europe.eu</a>, 2011. Accessed 28 April, 2013</p>
     <img src="/assets/pages/2011-07-20 at 06-00-24.jpg" alt="mangroves nursery" id="img-mangroves-nursery">
-    </div>  
+    </div>
   </div>
 </div>
 
@@ -64,35 +64,35 @@
 <div class="content-full">
   <div class="inner-e ecosystems">
     <div class="core-ecosystems">
-      <div id="blue-carbon-ecosystem"><h3 class="upper">The Blue Carbon <br> Ecosystems Of Abu Dhabi</h3></div>
+      <div id="blue-carbon-ecosystem"><h3 class="upper">The Blue Carbon <br> Ecosystems Of UAE</h3></div>
       <div id="mangroves">
         <p class="light-blue">Mangroves</p>
         <img src="/assets/pages/mangroves.png" alt="Mangroves" id="img-mangroves-small">
         <p>Mangroves are the most visible Blue Carbon ecosystem, occupying some 68 square kilometres along the UAE coast.</p>
-        <p>A patch of mangrove forest in the east of Abu Dhabi was the first to be intentionally planted in the UAE and dates back to 1966. Over the following decades this practice was expanded along the Emirate’s coast, with particular success in sheltered locations adjacent to existing stands.
+        <p>A patch of mangrove forest in the east of Abu Dhabi was the first to be intentionally planted in the UAE and dates back to 1966. Over the following decades this practice was expanded along the UAE’s coast, with particular success in sheltered locations adjacent to existing stands.
         A single species - the grey mangrove (<span class="i">Avicennia marina</span>), locally known as Qurm- is found in Abu Dhabi. The dense and complex structure of old natural stands provides a rich environment for fish and other species.</p>
       </div>
       <div id="seagrass">
         <p class="light-blue">Seagrass meadows</p>
         <img src="/assets/pages/seagrass.png" alt="Seagrass" id="img-seagrass">
-        <p>Less visible, and beneath the waterline, Abu Dhabi hosts one of the world’s most expansive complex of seagrass meadows, supporting the second largest population of dugongs found anywhere.</p>
+        <p>Less visible, and beneath the waterline, UAE hosts one of the world’s most expansive complex of seagrass meadows, supporting the second largest population of dugongs found anywhere.</p>
         <p>The meadows are populated by mosaics of three seagrass species (<span class="i">Halodule uninervis, Halophila ovalis, and Halophila stipulacea</span>), which are found near the shore and around islands down to a depth of 8 metres. Like saltmarshes and mangroves, many seagrasses accumulate carbon within soils through the production and storage of root material.</p>
       </div>
       <div id="saltmarshes">
         <p class="light-blue">Saltmarshes</p>
         <img src="/assets/pages/saltmarsh.png" alt="Saltmarsh" id="img-saltmarsh">
-        <p>Saltmarshes are relatively rare in the Emirate, found locally at high tidal elevations and behind mangrove stands.</p>
+        <p>Saltmarshes are relatively rare in the UAE, found locally at high tidal elevations and behind mangrove stands.</p>
         <p>The vegetation consists of specialist salt tolerant dwarf shrubs of the goosefoot (<span class="i">Chenopodiaceae</span>) and caltrop (<span class="i">Zygophyllaceae</span>) family, as well as the desert hyacinth (<span class="i">Cistanche tubulosa</span>) favored for eastern traditional medicinal benefits.</p>
       </div>
     </div>
-    <div class="other-ecosystems">  
+    <div class="other-ecosystems">
       <div id="candidate-ecosystem"><h3 class="upper">Associated Ecosystem</h3></div>
       <div id="sabkha">
         <p class="light-blue fix-orphans">Sabkha</p>
         <img src="/assets/pages/sabkha.png" alt="Sabkha" id="img-sabkha">
         <p>During the project a small set of samples were also collected from coastal sabkha with the purpose of assessing its association with Blue Carbon Ecosystems. Although not a Blue Carbon ecosystem, historic soil carbon stocks that are likely to have a Blue Carbon origin were identified below the surface at some of these sites in the form of buried seagrass, algal flat and mangrove soils. Excavation of these soils and placement in dry conditions could result in a release of carbon dioxide to the atmosphere. Removal of these for the purpose of mangrove planting may not therefore result in net greenhouse gas benefits. The distribution and magnitude of these buried carbon stores is however currently known and would require further study.</p>
         <p>The  <%= link_to "downloadable map", "/assets/Coastal_Sabkha.jpg", :target => "_blank"
-  %> illustrates the carbon values derived from the soil at the sampled sites as well as the overall extent of coastal sabkha in Abu Dhabi.</p>
+  %> illustrates the carbon values derived from the soil at the sampled sites as well as the overall extent of coastal sabkha in UAE.</p>
       </div>
     </div>
     <div class="other-ecosystems">
