--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -63,8 +63,8 @@
           <a href="http://www.grida.no">
             <img src="/assets/arendal_group_logo.png" alt="Supporters" class="img-footer-supporters">
           </a>
-          <a href="http://www.unep-wcmc.org">
-            <img src="/assets/wcmc_group_logo.png" alt="Supporters" class="img-footer-supporters">
+          <a href="https://www.unep-wcmc.org">
+            <img src="https://s3.amazonaws.com/wcmc.logo/UN-Environment-WCMC+logo+2017.svg" alt="Supporters" class="img-footer-supporters">
           </a>
         </div>
         <div id="authentication" class="navbar"><%= render "layouts/sign_in" %></div>
