--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -64,7 +64,7 @@
             <img src="/assets/arendal_group_logo.png" alt="Supporters" class="img-footer-supporters">
           </a>
           <a href="https://www.unep-wcmc.org">
-            <img src="https://s3.amazonaws.com/wcmc.logo/UN-Environment-WCMC+logo+2017.svg" alt="Supporters" class="img-footer-supporters">
+            <img src="https://s3.amazonaws.com/wcmc.logo/UN-Environment-WCMC+logo+2017.svg" alt="Supporters" class="wcmc-logo img-footer-supporters">
           </a>
         </div>
         <div id="authentication" class="navbar"><%= render "layouts/sign_in" %></div>
